@@ -109,7 +109,7 @@ trait Group[T] { outer =>
 private[finagle] case class NameGroup(name: Name.Bound)
   extends Group[SocketAddress] {
     protected[finagle] lazy val set: Var[Set[SocketAddress]] = name.addr map {
-      case Addr.Bound(set) => set
+      case Addr.Bound(set, _) => set
       case _ => Set()
     }
   }
@@ -139,7 +139,7 @@ object Group {
 
   def fromVarAddr(va: Var[Addr]): Group[SocketAddress] = new Group[SocketAddress] {
     protected[finagle] val set = va map {
-      case Addr.Bound(sockaddrs) => sockaddrs
+      case Addr.Bound(sockaddrs, _) => sockaddrs
       case _ => Set[SocketAddress]()
     }
   }
