@@ -524,7 +524,7 @@ abstract class MultiReaderBuilder[Req, Rep, Builder] private[kestrel](
     val currentHandles = mutable.Map.empty[SocketAddress, ReadHandle]
 
     val event = config.va.changes map {
-      case Addr.Bound(socketAddrs) => {
+      case Addr.Bound(socketAddrs, _) => {
         (currentHandles.keySet &~ socketAddrs) map { socketAddr =>
           logger.info("Host %s left for reading %s.".format(socketAddr, config.queueName))
         }
